python/testData/highlighting/fStringTooDeeplyNestedExpressionFragmentsBefore312.py
f'{x:{y:<error descr="Python version 3.6 does not allow nesting expressions in format specifiers this deep">{<error descr="Expression expected">}</error></error>}}'
f'{x:{y:<error descr="Python version 3.6 does not allow nesting expressions in format specifiers this deep">{z<error descr="An illegal conversion character 'z': should be one of 's', 'r', 'a'">!z</error>}</error>}}'
f'{x:{y:<error descr="Python version 3.6 does not allow nesting expressions in format specifiers this deep">{z:<error descr="Python version 3.6 does not allow nesting expressions in format specifiers this deep">{42}</error>}</error>}}'
f'{<error descr="Expression expected">:</error>{<error descr="Expression expected">:</error><error descr="Python version 3.6 does not allow nesting expressions in format specifiers this deep">{<error descr="Expression expected">:</error><error descr="Python version 3.6 does not allow nesting expressions in format specifiers this deep">{<error descr="Expression expected">}</error></error>}</error>}}'
f'{x:{y:<error descr="Python version 3.6 does not allow nesting expressions in format specifiers this deep">{z</error><EOLError descr="Type conversion, ':' or '}' expected"></EOLError><EOLError descr="' expected"></EOLError>